--- a/swl.html
+++ b/swl.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 
 <meta charset="utf-8">
-<title>The Title Of Your Presentation</title>
+<title>Watching structured data</title>
 
 <!-- Your Slides -->
 <!-- One section is one slide -->
 
 <section>
     <!-- This is the first slide -->
-    <h1>My Presentation</h1>
-    <footer>by John Doe</footer>
+    <h2>Watching structured data</h2>
+    <footer class="mainfooter">by Jeroen De Dauw</footer>
 </section>
 
 <section>
-    <h2>Part one</h2>
-</section>
-
-<section>
-    <h3>An incremental list</h3>
+    <h3>The problem</h3>
     <ul class="incremental">
-      <li>Item 1
-      <li>Item 2
-      <li>Item 3
+      <li>Keeping track of structured data only</li>
+      <li>Specific structured data</li>
+      <li>Email notifications</li>
+      <li>MediaWiki watchlist insuficcient</li>
     </ul>
+    <footer>foo bar baz foo bar baz foo bar baz foo bar baz </footer>
+</section>
+
+<section>
+    <h1>Semantic Watchlist</h1>
+</section>
+
+<section>
+		
 </section>
 
 <section>
@@ -30,24 +36,6 @@
     Soothe us with sweet lies. Is that a cooking show? No! I want to
     live! There are still too many things I don't own!
   </q>
-</section>
-
-<section>
-    <h2>Part two</h2>
-</section>
-
-<section>
-    <h3>An image</h3>
-    <img src="http://placekitten.com/g/800/600">
-</section>
-
-<section>
-    <h3>A video</h3>
-    <video src="http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm"></video>
-</section>
-
-<section>
-    <h2>End!</h2>
 </section>
 
 <!-- Your Style -->
@@ -63,15 +51,24 @@
   section {
       /* The font from Google */
       font-family: 'Oswald', arial, serif;
-      font-size: 40px;
+      font-size: 20px;
   }
-  h1, h2 {
+  
+  h1 {
     margin-top: 200px;
     text-align: center;
     font-size: 80px;
   }
+  
+  h2 {
+    margin-top: 200px;
+    text-align: center;
+    font-size: 55px;
+  }
+  
   h3 {
     margin: 100px 0 50px 100px;
+    font-size: 40px;
   }
 
   ul {
@@ -97,10 +94,15 @@
     z-index: -1;
   }
 
+  .mainfooter {
+    font-size: 40px;
+  }
+
   footer {
     position: absolute;
     bottom: 10px;
     right: 20px;
+    font-size: 15px;
   }
 
   /* Transition effect */
