tweaks after suggestions by Yaron

--- a/swl/index.html
+++ b/swl/index.html
@@ -19,7 +19,15 @@
       <li>Keeping track of structured data only</li>
       <li>Specific structured data</li>
       <li>Email notifications</li>
-      <li>MediaWiki watchlist insuficcient</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Existing tools</h3>
+    <ul class="incremental">
+    	<li>MediaWiki watchlist</li>
+    	<li>Semantic Notifications</li>
+    	<li>Semantic NotifyMe</li>
     </ul>
 </section>
 
@@ -60,10 +68,13 @@
 <section>
     <h3>Some background</h3>
     <ul class="incremental">
-    	<li><a href="http://wikiworks.com/">WikiWorks</a></li>
-    	<li>GNU GPL v3</li>
-    	<li>July 2011</li>
-    	<li>Version 0.1 (beta)</li>
+    	<li style="font-size: 27px;">
+    		Developed by <a href="http://wikiworks.com/">WikiWorks</a>
+    		for <a href="http://www.ieee.org/">the IEEE</a>
+    	</li>
+    	<li>Licenced under the GNU GPL v3</li>
+    	<li>Cearted around July 2011</li>
+    	<li>Currently at version 0.1 (beta)</li>
     </ul>
 </section>
 
