--- a/spark/index.html
+++ b/spark/index.html
@@ -63,6 +63,11 @@
     font-size: 40px;
   }
 
+  h4 {
+    margin: 100px 0 50px 100px;
+    font-size: 35px;
+  }
+
   ul {
       margin: 50px 200px;
   }
