--- a/maps/index.html
+++ b/maps/index.html
@@ -62,6 +62,11 @@
     margin: 100px 0 50px 100px;
     font-size: 40px;
   }
+  
+  h4 {
+    margin: 100px 0 50px 100px;
+    font-size: 35px;
+  }
 
   ul {
       margin: 50px 200px;
@@ -203,7 +208,7 @@
     
     for ( i in slides ) {
     	if ( slides[i].className != "main" ) {
-    		slides[i].innerHTML += '<footer>The future of visualizations in SMW, Jeroen De Dauw, SMWCon 2011 Berlin</footer>';
+    		slides[i].innerHTML += '<footer>What's new/upcomming in <a href="http://www.mediawiki.org/wiki/Extension:Semantic_Maps">Semantic Maps</a>, Jeroen De Dauw, SMWCon 2011 Berlin</footer>';
     	}
     }
     
