--- a/maps/index.html
+++ b/maps/index.html
@@ -10,12 +10,35 @@
 </section>
 
 <section>
-    <h3></h3>
+    <h3>Maps & Semantic Maps</h3>
+    <ul class="incremental">
+      <li>Created during GSoC 2009</li>
+      <li>Embedding of maps</li>
+      <li>Geocoding and geo operations</li>
+      <li>Geographic Coordinates datatype</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Some history</h3>
     <ul class="incremental">
       <li></li>
     </ul>
 </section>
 
+<section>
+    <h3>Changes since last SMWCon</h3>
+    <ul class="incremental">
+      <li></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Further possibilities</h3>
+    <ul class="incremental">
+      <li></li>
+    </ul>
+</section>
 
 <section>
     <p class="black">
@@ -26,6 +49,7 @@
 <section>
 	<h3>Some links</h3>
 	<ul>
+		<li><a href="http://www.mediawiki.org/wiki/Extension:Maps" style="color: black">Maps</a><br /></li>
 		<li><a href="http://www.mediawiki.org/wiki/Extension:Semantic_Maps" style="color: black">Semantic Maps</a><br /></li>
 		<li><a href="https://github.com/JeroenDeDauw/smwcon/tree/master/maps" style="color: black">Presentation source (Github)</a><br /></li>
 		<li>Follow me on Twitter: <a href="https://twitter.com/#!/JeroenDeDauw" style="color: black">@JeroenDeDauw</a><br /></li>
