--- a/swl/index.html
+++ b/swl/index.html
@@ -16,8 +16,8 @@
 <section>
     <h3>The problem</h3>
     <ul class="incremental">
-      <li>Keeping track of structured data only</li>
-      <li>Specific structured data</li>
+      <li>Keeping track of only structured data, not whole pages</li>
+      <li>... even specific structured data</li>
       <li>Email notifications</li>
     </ul>
 </section>
@@ -36,7 +36,7 @@
 </section>
 
 <section>
-    <h3>Semantic Watchlist</h3>
+    <h3>Semantic Watchlist components</h3>
     <ul class="incremental">
     	<li>Watchlist conditions</li>
     	<li>User preferences</li>
@@ -73,7 +73,7 @@
     		for <a href="http://www.ieee.org/">the IEEE</a>
     	</li>
     	<li>Licenced under the GNU GPL v3</li>
-    	<li>Cearted around July 2011</li>
+    	<li>Created around July 2011</li>
     	<li>Currently at version 0.1 (beta)</li>
     </ul>
 </section>
