work on maps presentation

--- a/maps/index.html
+++ b/maps/index.html
@@ -22,21 +22,30 @@
 <section>
     <h3>Some history</h3>
     <ul class="incremental">
-      <li></li>
+      <li>Version 0.1 2009-07</li>
+      <li>Version 1.0 2011-07</li>
+      <li>Version 1.0.3 2011-09</li>
     </ul>
 </section>
 
 <section>
     <h3>Changes since last SMWCon</h3>
     <ul class="incremental">
-      <li></li>
+      <li>Google Maps v3 support</li>
+      <li>Tag extensions</li>
+      <li>Improved form inputs</li>
+      <li>KML support</li>
+      <li>Resource loader support</li>
+      <li>>9000 tweaks and improvements</li>
     </ul>
 </section>
 
 <section>
     <h3>Further possibilities</h3>
     <ul class="incremental">
-      <li></li>
+      <li>Support other geographic features</li>
+      <li>PostGis and Spatial extensions support</li>
+      <li>Marker clustering</li>
     </ul>
 </section>
 
@@ -232,7 +241,7 @@
     
     for ( i in slides ) {
     	if ( slides[i].className != "main" ) {
-    		slides[i].innerHTML += '<footer>What's new/upcomming in <a href="http://www.mediawiki.org/wiki/Extension:Semantic_Maps">Semantic Maps</a>, Jeroen De Dauw, SMWCon 2011 Berlin</footer>';
+    		slides[i].innerHTML += '<footer>What\'s new/upcomming in <a href="http://www.mediawiki.org/wiki/Extension:Semantic_Maps">Semantic Maps</a>, Jeroen De Dauw, SMWCon 2011 Berlin</footer>';
     	}
     }
     
