created spark stuff and tweaked swl

--- a/spark/index.html
+++ b/spark/index.html
@@ -10,12 +10,39 @@
 </section>
 
 <section>
-    <h3></h3>
+    <h3>Current situation</h3>
     <ul class="incremental">
-      <li></li>
+      <li>A few dozen result formats</li>
+      <li>Little interaction</li>
+      <li>No fetching of extra data after page load</li>
+      <li>Let's of code specific to SMW, high maintenance</li>
     </ul>
 </section>
 
+<section>
+    <h3>More formats, less work</h3>
+    <ul class="incremental">
+      <li>Support libraries, not formats</li>
+      <li>Reduce SMW specific code</li>
+      <li>More generic support for interactive formats</li>
+     </ul>
+</section>
+
+<section>
+    <h3>Visualization libs w/ SPARQL support</h3>
+    <ul class="incremental">
+      <li><a href="http://km.aifb.kit.edu/sites/spark/">Spark</a> (<a href="http://www.mediawiki.org/wiki/Extension:Spark">MediaWiki extension</a>)</li>
+      <li><a href="https://code.google.com/p/sgvizler/">sgvizler</a></li>
+     </ul>
+</section>
+
+<section>
+    <h3>Generic interactive format support</h3>
+    <ul class="incremental">
+      <li>Ask API</li>
+      <li>JavaScript libraries</li>
+     </ul>	
+</section>
 
 <section>
     <p class="black">
