--- a/swl/index.html
+++ b/swl/index.html
@@ -3,11 +3,7 @@
 <meta charset="utf-8">
 <title>Watching structured data</title>
 
-<!-- Your Slides -->
-<!-- One section is one slide -->
-
 <section class="main">
-    <!-- This is the first slide -->
     <h2>Watching structured data</h2>
     <footer class="mainfooter">by Jeroen De Dauw</footer>
     <footer class="license">CC BY-SA 3.0</footer>
@@ -76,6 +72,10 @@
     	<li>Created around July 2011</li>
     	<li>Currently at version 0.1 (beta)</li>
     </ul>
+</section>
+
+<section>
+    <img src="http://placekitten.com/g/800/600">
 </section>
 
 <section>
