readme++ and tweaks to spark presentation

--- a/spark/index.html
+++ b/spark/index.html
@@ -10,6 +10,15 @@
 </section>
 
 <section>
+    <h3>Quick reminder</h3>
+    <ul>
+      <li><a href="https://twitter.com/#!/search/%23SMWCon" style="color: black">#SMWCon</a></li>
+      <li><a href="https://twitter.com/#!/SemanticMW"  style="color: black">@SemanticMW</a></li>
+      <li><a href="http://bit.ly/smwcon"  style="color: black">bit.ly/smwcon</a></li>
+    </ul>
+</section>
+
+<section>
     <h3>Current situation</h3>
     <ul class="incremental">
       <li>A few dozen result formats</li>
@@ -31,7 +40,7 @@
 <section>
     <h3>Visualization libs w/ SPARQL support</h3>
     <ul class="incremental">
-      <li><a href="http://km.aifb.kit.edu/sites/spark/">Spark</a> (<a href="http://www.mediawiki.org/wiki/Extension:Spark">MediaWiki extension</a>)</li>
+      <li><a href="http://km.aifb.kit.edu/sites/spark/">Spark</a> (<a href="http://www.mediawiki.org/wiki/Extension:Spark">MediaWiki extension</a>, <a href="http://129.13.109.100/~dropedia/index.php/Baqqouria_Spring">Example</a>)</li>
       <li><a href="https://code.google.com/p/sgvizler/">sgvizler</a></li>
      </ul>
 </section>
@@ -39,7 +48,7 @@
 <section>
     <h3>Generic interactive format support</h3>
     <ul class="incremental">
-      <li>Ask API</li>
+      <li>Ask API (<a href="http://localhost/phase3/api.php?action=ask&query=[[Modification%20date::%2B]]|%3FModification%20date|sort%3DModification%20date|order%3Ddesc">example</a>, <a href="http://localhost/phase3/api.php?action=askargs&conditions=Modification%20date::%2B&printeouts=Modification%20date&parameters=|sort%3DModification%20date|order%3Ddesc">example</a>)</li>
       <li>JavaScript libraries</li>
      </ul>	
 </section>
