--- a/2012spring/srf/index.html
+++ b/2012spring/srf/index.html
@@ -33,6 +33,78 @@
     </ul>
 </section>
 
+<section>
+    <h3>MW 1.17: resource loader</h3>
+    <ul class="incremental">
+        <li>Modules and dependencies</li>
+        <li>Minifies and combines resources</li>
+        <li>Base64 embedded images and RTL</li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW + SRF 1.6.x</h3>
+    <ul class="incremental">
+        <li>Better parameter handling</li>
+        <li>Many fixes</li>
+        <li>... and minor feature adittions</li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW + SRF 1.7.x</h3>
+    <ul class="incremental">
+        <li>Distribution support</li>
+        <li>Valuerank format</li>
+        <li>D3 formats</li>
+        <li>Tree formats</li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW + SRF 1.8.x: now</h3>
+    <ul class="incremental">
+        <li>Filtered format</li>
+        <li>JitGraph format</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Documentation++;</h3>
+</section>
+
+<section>
+    <h3>The future</h3>
+</section>
+
+<section>
+    <h3>Spark</h3>
+    <ul class="incremental">
+        <li>Embedded SPARQL</li>
+        <li>Minimal integration required</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Wikidata?</h3>
+</section>
+
+<section>
+    <h1>Questions?</h1>
+</section>
+
+<section>
+    <h3>Special:Links</h3>
+    <ul style="margin-left:142px">
+        <li><a href="http://semantic-mediawiki.org/wiki/Category:Result_formats">Result format documentation</a></li>
+    </ul>
+    <footer>
+        <span style="display:block; font-size: 20px;"><a href="http://semantic-mediawiki.org/wiki/SMWCon_Spring_2012">SMWCon Spring 2012</a></span>
+        <span style="display:block; font-size: 20px;"><a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></span>
+        <span style="display:block; font-size: 12px; color: darkgray;"><a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a></span>
+    </footer>
+</section>
+
 
 <!-- Your Style -->
 <!-- Define the style of your presentation -->
