background of awesome

--- a/2012spring/srf/index.html
+++ b/2012spring/srf/index.html
@@ -113,26 +113,35 @@
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
 
 <style>
-    html { background-color: black; color: white; }
-    body { background-color: black; background-size: 100%;}
+    html { background-color: #f6f6f6; color: black; }
+    body { background: url( 'images/bg2.jpeg' ); background-size: 100%;}
         /* A section is a slide. It's size is 800x600, and this will never change */
     section {
         /* The font from Google */
         font-family: 'Ubuntu', arial, serif;
         font-size: 30px;
     }
-    h1, h2 {
+
+    h1 {
+        margin-top: 85px;
+    }
+
+    h2 {
         margin-top: 200px;
+    }
+
+    h1, h2 {
         text-align: center;
         font-size: 80px;
     }
+
     h3 {
         margin: 100px 0 50px 100px;
     }
 
     a {
         text-decoration:none;
-        color:white;
+        color:black;
     }
 
     ul {
@@ -174,8 +183,8 @@
         width: 100%;
         padding: 40px;
         text-align: right;
-        background-color: #1A1A15;
-        border-top: 1px solid #333;
+        background-color: #F3F4F8;
+        border-top: 1px solid #CCC;
     }
 
         /* Transition effect */
@@ -212,7 +221,7 @@
     progress of the presentation. */
     #progress-bar {
         height: 2px;
-        background: #AAA;
+        background: #333;
     }
 
     .smallimg {
