some more stuff and added favicon

--- a/2012spring/srf/index.html
+++ b/2012spring/srf/index.html
@@ -2,6 +2,7 @@
 
 <meta charset="utf-8">
 <title>SMW result formats</title>
+<link rel="shortcut icon" href="images/favicon.ico" />
 
 <!-- Your Slides -->
 <!-- One section is one slide -->
@@ -47,7 +48,7 @@
     <ul class="incremental">
         <li>Better parameter handling</li>
         <li>Many fixes</li>
-        <li>... and minor feature adittions</li>
+        <li>... and minor feature additions</li>
     </ul>
 </section>
 
@@ -70,7 +71,17 @@
 </section>
 
 <section>
-    <h3>Documentation++;</h3>
+    <h3 style="margin-bottom: 20px">Documentation++;</h3>
+    <a href="http://semantic-mediawiki.org/wiki/Category:Result_formats">
+        <img src="images/formats.png" style="display: block; margin-left: auto;margin-right: auto;" />
+    </a>
+</section>
+
+<section>
+    <h3>Developer docs o_O</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Writing_result_printers">Link or it didn't happen</a></li>
+    </ul>
 </section>
 
 <section>
@@ -97,6 +108,7 @@
     <h3>Special:Links</h3>
     <ul style="margin-left:142px">
         <li><a href="http://semantic-mediawiki.org/wiki/Category:Result_formats">Result format documentation</a></li>
+        <li><a href="https://github.com/JeroenDeDauw/smwcon/">These slides on GitHub</a></li>
     </ul>
     <footer>
         <span style="display:block; font-size: 20px;"><a href="http://semantic-mediawiki.org/wiki/SMWCon_Spring_2012">SMWCon Spring 2012</a></span>
@@ -183,7 +195,7 @@
         width: 100%;
         padding: 40px;
         text-align: right;
-        background-color: #F3F4F8;
+        background-color: #F6F6F6;
         border-top: 1px solid #CCC;
     }
 
