--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -1,19 +1,170 @@
 <!DOCTYPE html>
+
 <meta charset="utf8">
-<title>DZSlides</title>
+<title>...</title>
+
+<div id="slides">
+  <iframe allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
+</div>
+<div id="controls">
+  <button title="prev" id="back" onclick="Dz.back()">&#9664;</button>
+  <button title="next" id="forward" onclick="Dz.forward()">&#9654;</button>
+  <div id="rightcontrols">
+    <input onchange="Dz.setCursor(this.value)" size="2" id="slideidx" value="0" />/<span id="slidecount">...</span>
+    <button title="Go fullscreen or open in a new window" id="fullscreen" onclick="Dz.goFullscreen()">&#8689;</button>
+  </div>
+</div>
+
+<style>
+  html { height: 100%;}
+  body {
+    margin: 0;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+  }
+  #slides, #controls {
+    left: 0;
+    position: absolute;
+    right: 0;
+  }
+  #controls {
+    color: white;
+    font-family: monospace;
+    height: 30px;
+    line-height: 30px;
+    padding: 5px;
+  }
+  #slides {
+    bottom: 40px;
+    top: 0;
+  }
+  iframe {
+    border: none;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+  }
+  #controls {
+    bottom: 0;
+    float: right;
+    font-size: 13px;
+    text-align: center;
+  }
+  #controls button[disabled] {color: #333;}
+  button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: #bbb;
+    padding: 0;
+    font-size: 20px;
+    line-height: 100%;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    position: relative;
+  }
+  button:hover {
+    color: white;
+  }
+  button:active {
+    top: 1px;
+    left: 1px;
+  }
+  #slideidx {
+    border: none;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+    text-align: center;
+  }
+  #rightcontrols * { vertical-align: middle; }
+  #rightcontrols {
+    bottom: 4px;
+    position: absolute;
+    top: 4px;
+    right: 10px;
+  }
+  #fullscreen {-moz-transform: scaleX(-1);-webkit-transform: scaleX(-1);-o-transform: scaleX(-1);-ms-transform: scaleX(-1);transform: scaleX(-1);}
+</style>
 
 <script>
-  function $(query) { return document.querySelector(query)}
-  function $$(query) { return document.querySelectorAll(query)}
-  NodeList.prototype.forEach = function(fun) {
-    if (typeof fun !== "function") throw new TypeError();
-    for (var i = 0; i < this.length; i++) {
-      fun.call(this, this[i]);
+  var Dz = {
+    view: null,
+    url: null,
+    idx: 1,
+    count: null,
+    iframe: null
+  };
+  
+  Dz.init = function() {
+    this.loadIframe();
+  }
+  
+  Dz.onkeydown = function(aEvent) {
+    // Don't intercept keyboard shortcuts
+    if (aEvent.altKey
+      || aEvent.ctrlKey
+      || aEvent.metaKey
+      || aEvent.shiftKey) {
+      return;
+    }
+    if ( aEvent.keyCode == 37 // left arrow
+      || aEvent.keyCode == 38 // up arrow
+      || aEvent.keyCode == 33 // page up
+    ) {
+      aEvent.preventDefault();
+      this.back();
+    }
+    if ( aEvent.keyCode == 39 // right arrow
+      || aEvent.keyCode == 40 // down arrow
+      || aEvent.keyCode == 34 // page down
+    ) {
+      aEvent.preventDefault();
+      this.forward();
+    }
+    if (aEvent.keyCode == 35) { // end
+      aEvent.preventDefault();
+      this.goEnd();
+    }
+    if (aEvent.keyCode == 36) { // home
+      aEvent.preventDefault();
+      this.goStart();
+    }
+    if (aEvent.keyCode == 32) { // space
+      aEvent.preventDefault();
+      this.toggleContent();
+    }
+    if (aEvent.keyCode == 70) { // f
+      aEvent.preventDefault();
+      this.goFullscreen();
     }
   }
-  var views = {}, notes, url, idx = 1;
-
-  function getURL() {
+  
+  Dz.onmessage = function(aEvent) {
+    if (aEvent.source === this.view) {
+      var argv = aEvent.data.split(" "), argc = argv.length;
+      argv.forEach(function(e, i, a) { a[i] = decodeURIComponent(e) });
+      if (argv[0] === "CURSOR" && argc === 2) {
+        var cursor = argv[1].split(".");
+        this.idx = ~~cursor[0];
+        this.step = ~~cursor[1];
+        $("#slideidx").value = this.idx;
+        $("#back").disabled = this.idx == 1;
+        $("#forward").disabled = this.idx == this.count;
+      }
+      if (argv[0] === "REGISTERED" && argc === 3) {
+        $("#slidecount").innerHTML = this.count = argv[2];
+        document.title = argv[1];
+      }
+    }
+  }
+  
+  /* Get url from hash or prompt and store it */
+  
+  Dz.getUrl = function() {
     var u = window.location.hash.split("#")[1];
     if (!u) {
       u = window.prompt("What is the URL of the slides?");
@@ -21,262 +172,106 @@
         window.location.hash = u.split("#")[0];
         return u;
       }
-      u= "<style>body{background-color:white;color:black}</style>";
-      u+= "<strong>ERROR:</strong> No URL specified.<br>"
-      u+= "Try<em>: " + document.location + "#yourslides.html</em>"
-      u= "data:text/html," + encodeURIComponent(u);
+      u = "<style>body{background-color:white;color:black}</style>";
+      u += "<strong>ERROR:</strong> No URL specified.<br>";
+      u += "Try<em>: " + document.location + "#yourslides.html</em>";
+      u = "data:text/html," + encodeURIComponent(u);
     }
     return u;
   }
-
-  window.onload = function() {
-    var iframes = $$("iframe");
-    var operationsCount = iframes.length;
-    url = getURL();
-    iframes.forEach(function(f) {
-      f.onload = function() {
-        operationsCount--;
-        if (operationsCount == 0) {
-          iframesLoaded();
-        }
-      }
-      f.src = url;
-    });
-    function iframesLoaded() {
-      views.present = $("#present > iframe").contentWindow;
-      views.future = $("#future > iframe").contentWindow;
-      views.present.postMessage("register", "*");
-    }
-    notes = $("#notes > #content");
-    startClock();
-  }
-  window.onhashchange = window.onload;
-
-  window.onmessage = function(e) {
-    if (e.source === views.present) {
-      var args = JSON.parse(e.data);
-      if (args.method === "newslide") {
-        idx = ~~args.idx;
-        notes.innerHTML = args.details
-        $$(".slideidx").forEach(function(p) {p.innerHTML = idx;});
-        $$(".nextslideidx").forEach(function(p) {p.innerHTML = idx + 1;});
-        views.future.postMessage("setSlide(" + (idx + 1) + ")", "*");
-        if (views.remote) views.remote.postMessage("setSlide(" + idx + ")", "*");
-      }
-      if (args.method === "registered") {
-        $$(".slidecount").forEach(function(p) {p.innerHTML = args.count;});
-      }
+  
+  Dz.loadIframe = function() {
+    this.iframe = $("iframe");
+    this.iframe.src = this.url = this.getUrl();
+    this.iframe.onload = function() {
+      Dz.view = this.contentWindow;
+      Dz.postMsg(Dz.view, "REGISTER");
     }
   }
-
-  function back() {views.present.postMessage("back", "*"); }
-  function forward() {views.present.postMessage("forward", "*"); }
-  function setSlide(i) {views.present.postMessage("setSlide(" + i + ")", "*"); }
-
-  function toggleContent() {
-    views.present.postMessage("toggleContent", "*");
-    views.remote.postMessage("toggleContent", "*");
+  
+  Dz.toggleContent = function() {
+    this.postMsg(this.view, "TOGGLE_CONTENT");
+  }
+  
+  Dz.onhashchange = function() {
+    this.loadIframe();
+  }
+  
+  Dz.back = function() {
+    this.postMsg(this.view, "BACK");
   }
 
-  window.onkeydown = function(e) {
-    // Don't intercept keyboard shortcuts
-    if (e.altKey || e.ctrlKey || e.metaKey || e.shiftKey) {
-      return;
-    }
-    if ( e.keyCode == 37 // left arrow
-      || e.keyCode == 33 // page up
-    ) {
-      e.preventDefault();
-      back();
-    }
-    if ( e.keyCode == 39 // right arrow
-      || e.keyCode == 34 // page down
-    ) {
-      e.preventDefault();
-      forward();
-    }
-    if ( e.keyCode == 32) {
-      e.preventDefault();
-      toggleContent();
-    }
-
-  }
-  function startClock() {
-    setInterval(function() {
-      var now = new Date();
-      var hoursElt = $("#hours");
-      var minutesElt = $("#minutes");
-      var secondsElt = $("#seconds");
-      hours = now.getHours();
-      minutes = now.getMinutes();
-      seconds = now.getSeconds();
-      if (hours < 10) hours = "0" + hours;
-      if (minutes < 10) minutes = "0" + minutes;
-      if (seconds < 10) seconds = "0" + seconds;
-      hoursElt.innerHTML = hours;
-      minutesElt.innerHTML = minutes;
-      secondsElt.innerHTML = seconds;
-    }, 1000);
+  Dz.forward = function() {
+    this.postMsg(this.view, "FORWARD");
   }
 
-  function openSlides() {
-    var windowObjectReference;
-    document.body.classList.add("slidesopen");
-    var strWindowFeatures = "resizable=yes";
-    views.remote = window.open(url + "#" + idx, "slides", strWindowFeatures);
+  Dz.goStart = function() {
+    this.postMsg(this.view, "START");
   }
+
+  Dz.goEnd = function() {
+    this.postMsg(this.view, "END");
+  }
+
+  Dz.setCursor = function(aCursor) {
+    this.postMsg(this.view, "SET_CURSOR", aCursor);
+  }
+
+  Dz.goFullscreen = function() {
+    var requestFullscreen = this.iframe.requestFullscreen || this.iframe.requestFullScreen || this.iframe.mozRequestFullScreen || this.iframe.webkitRequestFullScreen;
+    if (requestFullscreen) {
+      requestFullscreen.apply(this.iframe);
+    } else {
+      window.open(this.url + "#" + this.idx, '', 'width=800,height=600,personalbar=0,toolbar=0,scrollbars=1,resizable=1');
+    }
+  }
+  
+  Dz.postMsg = function(aWin, aMsg) { // [arg0, [arg1...]]
+    aMsg = [aMsg];
+    for (var i = 2; i < arguments.length; i++)
+      aMsg.push(encodeURIComponent(arguments[i]));
+    aWin.postMessage(aMsg.join(" "), "*");
+  }
+
+  function init() {
+    Dz.init();
+    window.onkeydown = Dz.onkeydown.bind(Dz);
+    window.onhashchange = Dz.loadIframe.bind(Dz);
+    window.onmessage = Dz.onmessage.bind(Dz);
+  }
+
+  window.onload = init;
 </script>
 
-<link href='http://fonts.googleapis.com/css?family=Copse' rel='stylesheet' type='text/css'>
 
-<style>
-  html, body {
-    height: 100%;
-    color: white;
+<script> // Helpers
+  if (!Function.prototype.bind) {
+    Function.prototype.bind = function (oThis) {
+
+      // closest thing possible to the ECMAScript 5 internal IsCallable
+      // function 
+      if (typeof this !== "function")
+      throw new TypeError(
+        "Function.prototype.bind - what is trying to be fBound is not callable"
+      );
+
+      var aArgs = Array.prototype.slice.call(arguments, 1),
+          fToBind = this,
+          fNOP = function () {},
+          fBound = function () {
+            return fToBind.apply( this instanceof fNOP ? this : oThis || window,
+                   aArgs.concat(Array.prototype.slice.call(arguments)));
+          };
+
+      fNOP.prototype = this.prototype;
+      fBound.prototype = new fNOP();
+
+      return fBound;
+    };
   }
 
-  body {
-    font-family: sans-serif;
-    overflow: hidden;
-  }
+  var $ = (HTMLElement.prototype.$ = function(aQuery) {
+    return this.querySelector(aQuery);
+  }).bind(document);
 
-  #present, #future {
-    bottom: 234px;
-    position: absolute;
-    top: 0;
-    z-index: 5;
-  }
-
-  #present {
-    left: 0;
-    right: 50%;
-    border-right: 4px solid #555;
-  }
-
-  #future {
-    left: 50%;
-    right: 0;
-    border-left: 4px solid #555;
-  }
-
-  #notes {
-    background: #EEE;
-    border-top: 8px solid #555;
-    bottom: 0;
-    color: #444;
-    font-size: 30px;
-    height: 226px;
-    left: 0;
-    padding: 0 240px 0 20px;
-    position: absolute;
-    right: 0;
-  }
-
-  #time {
-    background: #888;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    bottom: 0;
-    font-size: 40px;
-    font-weight: bold;
-    height: 52px;
-    line-height: 52px;
-    right: 20px;
-    position: absolute;
-    text-align: center;
-    width: 200px;
-  }
-
-  iframe {
-    border: none;
-    height: 100%;
-    pointer-events: none;
-    width: 100%;
-  }
-
-  .slideidx,
-  .nextslideidx, 
-  .slidecount {
-    background: #888;
-    font-size: 40px;
-    font-weight: bold;
-    height: 52px;
-    line-height: 52px;
-    margin: 0;
-    position: absolute;
-    text-align: center;
-    z-index: 10;
-  }
-
-  .slideidx,
-  .nextslideidx {
-    border-bottom: 4px solid #555;
-    bottom: 230px;
-    width: 80px;
-  }
-
-  .slideidx {
-    border-right: 4px solid #555;
-    border-top-left-radius: 10px;
-    cursor: pointer;
-    padding-left: 4px;
-    right: 50%;
-  }
-
-  .nextslideidx {
-    border-left: 4px solid #555;
-    border-top-right-radius: 10px;
-    left: 50%;
-    padding-right: 4px;
-  }
-
-  .slidecount {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-top: 4px solid #555;
-    bottom: 174px;
-    width: 200px;
-    right: 20px;
-  }
-
-  #popup-button {
-    bottom: 88px;
-    background: #888;
-    border: none;
-    border-radius: 10px;
-    color: #FFF;
-    cursor: pointer;
-    height: 52px;
-    font-size: 30px;
-    font-weight: bold;
-    position: absolute;
-    right: 20px;
-    width: 200px;
-    z-index: 10;
-  }
-
-  .slidesopen #present button {
-    display: none;
-  }
-</style>
-<div id="present">
-  <iframe></iframe>
-</div>
-
-<div id="future">
-  <iframe></iframe>
-</div>
-
-<div class="slideidx" onclick="var gotoidx=prompt('Go to slide...','1');setSlide(gotoidx);">?</div>
-<div class="nextslideidx">?</div>
-
-<div id="notes">
-  <p id="content"></p>
-</div>
-
-<div class="slidecount">?</div>
-<button id="popup-button" onclick="openSlides()">Pop-up</button>
-
-<div id="time">
-  <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
-</div>
+</script>
