Some initial slides

--- a/wikimania/dc/wdplatform.html
+++ b/wikimania/dc/wdplatform.html
@@ -10,12 +10,66 @@
     <img src="http://placekitten.com/g/800/600">
 </section>
 
-
+<section>
+    <h1>Overview</h1>
+    <ul>
+        <li>Motivation</li>
+        <li>Extension points</li>
+        <li>Your own Wikidata</li>
+        <li>Semantic MediaWiki</li>
+        <li>Your thoughts</li>
+   </ul>
+</section>
 
 <section>
-    <h1>Special:Ask</h1>
-    <h3 style="text-align:center; margin:20px;">We can has suggestions?</h3>
-    <img src="http://placekitten.com/g/800/300" width="800" height="300">
+    <h3>Motivation: reach</h3>
+    <ul class="incremental">
+        <li>Usage in 3rd party apps</li>
+        <li>Specialized handling</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Motivation: contributors++</h3>
+    <ul class="incremental">
+        <li>Usage in 3rd party apps</li>
+        <li>Dedicated editing tools</li>
+        <li>Lowers min editing size</li>
+        <li>Gamification</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Extension points</h3>
+    <ul class="incremental">
+        <li>PHP API</li>
+        <li>JavaScript API</li>
+        <li>PHP hooks</li>
+        <li>Change propagation</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Your own Wikidata</h3>
+    <ul class="incremental">
+        <li>TODO</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Semantic MediaWiki</h3>
+    <ul class="incremental">
+        <li>TODO</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Your thoughts</h3>
+    <ul class="incremental">
+        <li>Missing extension points?</li>
+        <li>Remarks/suggestions?</li>
+        <li>Questions?</li>
+    </ul>
 </section>
 
 <section>
