--- a/wikimania/dc/wdplatform.html
+++ b/wikimania/dc/wdplatform.html
@@ -50,16 +50,38 @@
 </section>
 
 <section>
-    <h3>Your own Wikidata</h3>
+    <h3>Wikidata PHP API</h3>
     <ul class="incremental">
-        <li>TODO</li>
+        <li>Resolving items</li>
+        <li>Getting items (including links)</li>
+        <li>Modifying items</li>
     </ul>
 </section>
 
 <section>
-    <h3>Semantic MediaWiki</h3>
+    <h3>Your own Wikidata</h3>
     <ul class="incremental">
-        <li>TODO</li>
+        <li>Single wiki</li>
+        <li>.. or repo-clients setup</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Semantic MediaWiki: differences</h3>
+    <ul class="incremental">
+        <li>Single truth</li>
+        <li>Not multilingual</li>
+        <li>More complex data types</li>
+        <li>More complex queries</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Semantic MediaWiki: aims</h3>
+    <ul class="incremental">
+        <li>Overlapping developer community</li>
+        <li>Sharing of common components</li>
+        <li>Integration</li>
     </ul>
 </section>
 
