Hack to re-register iframe after navigating away and back to page

--- a/wikimania/dc/wdplatform.html
+++ b/wikimania/dc/wdplatform.html
@@ -105,7 +105,7 @@
 
 <section>
 	<h3>Special:Attribution</h3>
-	<ul class="attribution">
+	<ul class="attribution" id="stufftofocus">
 		<li><a href="https://github.com/paulrouget/dzslides">Slide engine</a>: WTFPL, Paul Rouget</li>
 		<li>Slides: <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
 	</ul>
