wikimania dc slides++

--- a/wikimania/dc/wdplatform.html
+++ b/wikimania/dc/wdplatform.html
@@ -59,10 +59,48 @@
 </section>
 
 <section>
+    <img src="resources/php.png" width="600">
+</section>
+
+<section>
+    <h3>Wikidata JavaScript API</h3>
+    <ul class="incremental">
+        <li>Planned</li>
+        <li>Extensions</li>
+        <li>User scripts</li>
+    </ul>
+</section>
+
+<section>
+    <h3>PHP hooks</h3>
+    <ul class="incremental">
+
+    </ul>
+</section>
+
+<section>
+    <h3>Change propagation</h3>
+    <ul class="incremental">
+        <li>Poll script in lib</li>
+        <li>Redis? PubSubHubbub?</li>
+        <li>Extending Wikidata</li>
+        <li>Further propagation</li>
+    </ul>
+</section>
+
+<section>
     <h3>Your own Wikidata</h3>
     <ul class="incremental">
-        <li>Single wiki</li>
-        <li>.. or repo-clients setup</li>
+        <li>Client</li>
+        <li>Repo</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Your own Wikidata</h3>
+    <ul class="incremental">
+        <li>On a single wiki</li>
+        <li>... or repo-client(s) setup</li>
     </ul>
 </section>
 
