--- a/wikimania/dc/wdplatform.html
+++ b/wikimania/dc/wdplatform.html
@@ -43,8 +43,8 @@
     <h3>Extension points</h3>
     <ul class="incremental">
         <li>PHP API</li>
-        <li>JavaScript API</li>
         <li>PHP hooks</li>
+        <li>JavaScript API</li>
         <li>Change propagation</li>
     </ul>
 </section>
@@ -55,6 +55,13 @@
         <li>Resolving items</li>
         <li>Getting items (including links)</li>
         <li>Modifying items</li>
+    </ul>
+</section>
+
+<section>
+    <h3>PHP hooks</h3>
+    <ul class="incremental">
+
     </ul>
 </section>
 
@@ -72,10 +79,8 @@
 </section>
 
 <section>
-    <h3>PHP hooks</h3>
-    <ul class="incremental">
-
-    </ul>
+    <h3>Change propagation</h3>
+    <img src="resources/RC.png" width="550">
 </section>
 
 <section>
@@ -107,6 +112,14 @@
 <section>
     <h3>Semantic MediaWiki: differences</h3>
     <ul class="incremental">
+        <li>Single truth<img src="resources/fact.jpg"></li>
+    </ul>
+
+</section>
+
+<section>
+    <h3>Semantic MediaWiki: differences</h3>
+    <ul class="incremental">
         <li>Single truth</li>
         <li>Not multilingual</li>
         <li>More complex data types</li>
@@ -133,11 +146,19 @@
 </section>
 
 <section>
+    <img src="resources/patch.jpg" width="800">
+</section>
+
+<section>
     <h3>Special:Links</h3>
     <ul style="margin-left:142px">
-        <li><a href="https://github.com/JeroenDeDauw/slides/">These slides on GitHub (source)</a></li>
-        <li><a href="http://jeroendedauw.github.com/slides/wikimania/dc/#wdplatform.html#1">These slides on GitHub (pages)</a></li>
-		<li><a href="https://meta.wikimedia.org/wiki/Wikidata">Wikidata on meta</a></li>
+        <li><a href="https://github.com/JeroenDeDauw/slides/">These slides on GitHub (source)</a><br />&#160;</li>
+        <li>
+            <a href="http://jeroendedauw.github.com/slides/wikimania/dc/#wdplatform.html#1">These slides on GitHub (pages)</a>
+            <br />
+            &#160;&#160;-&#160;bit.ly/wdplatform<br />&#160;
+        </li>
+		<li><a href="https://meta.wikimedia.org/wiki/Wikidata">Wikidata on meta</a><br />&#160;</li>
     </ul>
 </section>
 
