--- a/wikimania/dc/wdplatform.html
+++ b/wikimania/dc/wdplatform.html
@@ -7,7 +7,7 @@
 <!-- One section is one slide -->
 
 <section>
-    <img src="http://placekitten.com/g/800/600">
+    <h2 style="font-size:60px;">Wikidata as a platform</h2>
 </section>
 
 <section>
@@ -19,6 +19,10 @@
         <li>Semantic MediaWiki</li>
         <li>Your thoughts</li>
    </ul>
+</section>
+
+<section>
+    <img src="resources/popup.png" width="600">
 </section>
 
 <section>
@@ -35,8 +39,12 @@
         <li>Usage in 3rd party apps</li>
         <li>Dedicated editing tools</li>
         <li>Lowers min editing size</li>
-        <li>Gamification</li>
+        <li>Facilitates gamification</li>
     </ul>
+</section>
+
+<section>
+    <h3>Motivation: developers++</h3>
 </section>
 
 <section>
@@ -61,7 +69,10 @@
 <section>
     <h3>PHP hooks</h3>
     <ul class="incremental">
-
+        <li>Data updates (additional indexing)</li>
+        <li>Most things still just planned:</li>
+        <li>.. Data types</li>
+        <li>.. Visualizations</li>
     </ul>
 </section>
 
@@ -86,18 +97,20 @@
 <section>
     <h3>Change propagation</h3>
     <ul class="incremental">
-        <li>Poll script in lib</li>
-        <li>Redis? PubSubHubbub?</li>
         <li>Extending Wikidata</li>
         <li>Further propagation</li>
+        <li>Poll script in lib</li>
+        <li>Redis? PubSubHubbub?</li>
     </ul>
 </section>
 
 <section>
     <h3>Your own Wikidata</h3>
     <ul class="incremental">
-        <li>Client</li>
-        <li>Repo</li>
+        <li><a href="https://www.mediawiki.org/wiki/Extension:Wikibase">Repo (Wikibase)</a></li>
+        <li><a href="https://www.mediawiki.org/wiki/Extension:Wikibase_Client">Client (Wikibase Client)</a></li>
+        <li>Alpha!</li>
+        <li>MW 1.20 + WD branch, PHP >= 5.3</li>
     </ul>
 </section>
 
@@ -158,7 +171,8 @@
             <br />
             &#160;&#160;-&#160;bit.ly/wdplatform<br />&#160;
         </li>
-		<li><a href="https://meta.wikimedia.org/wiki/Wikidata">Wikidata on meta</a><br />&#160;</li>
+        <li><a href="https://meta.wikimedia.org/wiki/Wikidata">Wikidata on meta</a><br />&#160;</li>
+        <li><a href="https://twitter.com/#!/wikidata">@Wikidata on Twitter</a><br />&#160;</li>
     </ul>
 </section>
 
