more final stuff :)

--- a/wikimania/dc/wdplatform.html
+++ b/wikimania/dc/wdplatform.html
@@ -63,6 +63,8 @@
         <li>Resolving items</li>
         <li>Getting items (including links)</li>
         <li>Modifying items</li>
+        <li>Planned: properties, queries</li>
+        <li>Planned: query results</li>
     </ul>
 </section>
 
