Work on SMWCon fall 2012 slides for smw

--- a/smwcon/2012fall/index.html
+++ b/smwcon/2012fall/index.html
@@ -10,12 +10,12 @@
 <footer>
 	<table><tr>
     		<td style="text-align:left;">
-    			<a href="http://wikimedia.de"><img src="resources/wmde.png" style="width:100px" ></a>
+    			<a href="http://wikimedia.de"><img src="resources/smw.png" style="width:100px" ></a>
     		</td>
     		<td valign="top">
 	    		<div class="footertext">
 			        <span style="display:block; font-size: 30px;"><a href="http://semantic-mediawiki.org/wiki/SMWCon_Fall_2012">SMWCon Fall 2012</a></span>
-			        <span style="display:block; font-size: 30px;"><a href="http://www.mediawiki.org/wiki/User:Jeroen_De_Dauw">Jeroen De Dauw</a></span>
+			        <span style="display:block; font-size: 30px;">Markus Krötzsch & <a href="http://www.mediawiki.org/wiki/User:Jeroen_De_Dauw">Jeroen De Dauw</a></span>
 			        <span style="display:block; font-size: 15px; color: darkgray;"><a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a></span>
 	    		</div>
     		</td>
