--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <meta charset="utf-8">
-<title>Wikidata as a platform</title>
+<title>Yearly SMW overview</title>
 
 <!-- Your Slides -->
 <!-- One section is one slide -->
@@ -28,6 +28,10 @@
         <li>Contributors up 56%</li>
         <!-- fancy graphs from Ohloh & github be here -->
     </ul>
+</section>
+
+<section>
+    <img src="resources/loc.png" width="600" class="intehcentre">
 </section>
 
 <section>
