--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -22,16 +22,45 @@
 </section>
 
 <section>
-    <h3>SMW factoids</h3>
+    <h3>Development: factoids</h3>
     <ul class="incremental">
-        <li>Commits up 22%</li>
-        <li>Contributors up 56%</li>
-        <!-- fancy graphs from Ohloh & github be here -->
+        <li><a href="https://www.ohloh.net/p/smw/commits/summary">~700 commits</a></li>
+        <li>
+            <a href="https://www.ohloh.net/p/smw/contributors/summary">~27 developers (up from 20), 58 total<br />
+            <img src="resources/contributors.png"></a><br />
+            Top 10% percent of open source projects
+        </li>
     </ul>
 </section>
 
 <section>
-    <img src="resources/loc.png" width="600" class="intehcentre">
+    <h3>Development: LOC</h3>
+    <ul class="incremental">
+        <li>
+            <a href="https://www.ohloh.net/p/smw/analyses/latest/languages_summary">
+                49K => 54K<br />
+                <img src="resources/loc.png"><br />
+           </a>
+        </li>
+        <li>"Mature, well-established codebase"</li>
+   </ul>
+</section>
+
+<section>
+    <h3>Development: extensions</h3>
+    <ul class="incremental">
+        <li>SRF: ~475 commits, up 103%</li>
+        <li>SRF: ~21 developers, up 90%</li>
+        <li>Maps & SM: ~22 developers, up 80%</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Development: migrated to Git</h3>
+    <ul class="incremental">
+        <li><small><a href="https://gerrit.wikimedia.org/r/p/mediawiki/extensions/SemanticMediaWiki.git">gerrit.wikimedia.org/ ... /SemanticMediaWiki.git</a></small></li>
+        <li><a href="https://gerrit.wikimedia.org/r/gitweb?p=mediawiki/extensions/SemanticMediaWiki.git;a=tags"><img src="resources/tags.png" width="550px"></a></li>
+    </ul>
 </section>
 
 <section>
