work on initial and end slides

--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -8,13 +8,9 @@
 
 <section>
     <h2 style="font-size:60px;">Yearly SMW overview</h2>
-</section>
-
-<section>
-    <h1>Overview</h1>
-    <ul>
-        <li></li>
-    </ul>
+    <!--<h5 align="center">2012</h5>-->
+    <br /><br />
+    <h6 align="center">bit.ly/smw-2012</h6>
 </section>
 
 <section>
@@ -74,7 +70,7 @@
         <li>
             <a href="http://jeroendedauw.github.com/slides/smwcon/2012fall/#smw-is-awesome.html#1">These slides on GitHub (pages)</a>
             <br />
-            &#160;&#160;-&#160;bit.ly/wdplatform<br />&#160;
+            &#160;&#160;-&#160;bit.ly/smw-2012<br />&#160;
         </li>
         <li><a href="http://semantic-mediawiki.org">semantic-mediawiki.org</a><br />&#160;</li>
         <li><a href="https://twitter.com/#!/wikidata">@SemanticMW on Twitter</a><br />&#160;</li>
