added base for some more slides

--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -52,6 +52,51 @@
 </section>
 
 <section>
+    <h3>New releases</h3>
+    <ul>
+        <li>2012-01-01: SMW 1.7</li>
+        <li>2012-03-05: SMW 1.7.1</li>
+        <li>2012-1?-??: SMW 1.8</li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW 1.7: #subobject</h3>
+    <ul>
+        <li></li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW 1.8: compatibility</h3>
+    <ul>
+        <li>Dropped support for MW 1.16</li>
+        <li>Support for MW 1.17 up to MW 1.21</li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW 1.8: SQLStore 3</h3>
+    <ul>
+        <li></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Improved documentation</h3>
+    <ul>
+        <li></li>
+    </ul>
+</section>
+
+<section>
+    <h3>The roadmap</h3>
+    <ul>
+        <li></li>
+    </ul>
+</section>
+
+<section>
     <h3>Development: migrated to Git</h3>
     <ul class="incremental">
         <li><small><a href="https://gerrit.wikimedia.org/r/p/mediawiki/extensions/SemanticMediaWiki.git">gerrit.wikimedia.org/ ... /SemanticMediaWiki.git</a></small></li>
