--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -83,6 +83,42 @@
 </section>
 
 <section>
+    <h3>SMW 1.8: Ask UI improvements</h3>
+    <ul>
+        <li>Less cluttered, more dynamic</li>
+        <li>Better documentation</li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Special:Ask"><img src="resources/ask.png" width="600px"></a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW 1.8: Tooltip improvements</h3>
+    <ul class="incremental">
+        <li>Old tooltips <s>horrible</s> sub-optimal</li>
+        <li>Rewritten using <a href="http://craigsworks.com/projects/qtip2/">qtip 2</a></li>
+        <li>Used by SMW and extensions</li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Help:Tooltip">semantic-mediawiki.org/wiki/Help:Tooltip</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Other improvements</h3>
+    <ul>
+        <li>Auto-numbering for subobjects</li>
+        <li>Improved continuation links</li>
+        <li>Creation date, Last editor is, Is a new page</li>
+        <li>...</li>
+    </ul>
+</section>
+
+<section>
+    <h3>SMW 1.8: Unit tests</h3>
+    <ul>
+        <li></li>
+    </ul>
+</section>
+
+<section>
     <h3>Improved documentation</h3>
     <ul>
         <li></li>
@@ -90,9 +126,28 @@
 </section>
 
 <section>
+    <h3>The roadmap: SMW 1.9</h3>
+    <ul>
+        <li>Q1 2013</li>
+        <li>Drop compatibility with MW 1.18</li>
+        <li>Drop compatibility with PHP 5.2.x</li>
+    </ul>
+</section>
+
+<section>
+    <h3>The roadmap: backend</h3>
+    <ul>
+        <li>Make use of DataValues library</li>
+        <li>Make use of Validator 1.0</li>
+        <li>PHP namespaces</li>
+        <li>RequestContext refactoring</li>
+    </ul>
+</section>
+
+<section>
     <h3>The roadmap</h3>
     <ul>
-        <li></li>
+        <li>What would you like to see?</li>
     </ul>
 </section>
 
