--- a/smwcon/2012fall/index.html
+++ b/smwcon/2012fall/index.html
@@ -10,7 +10,7 @@
 <footer>
 	<table><tr>
     		<td style="text-align:left;">
-    			<a href="http://wikimedia.de"><img src="resources/smw.png" style="width:100px" ></a>
+    			<a href="http://semantic-mediawiki.org/"><img src="resources/smw.png" style="width:100px" ></a>
     		</td>
     		<td valign="top">
 	    		<div class="footertext">
