Add SF and some color

--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -45,9 +45,12 @@
 <section>
     <h3>Development: extensions</h3>
     <ul class="incremental">
-        <li>SRF: ~475 commits, up 103%</li>
-        <li>SRF: ~21 developers, up 90%</li>
-        <li>Maps & SM: ~22 developers, up 80%</li>
+        <li>SF: ~500 commits, <span style="color:darkgreen">up 115%</span></li>
+        <li>SRF: ~475 commits, <span style="color:darkgreen">up 103%</span></li>
+
+        <li>SF: ~22 developers, <span style="color:darkgreen">up 100%</span></li>
+        <li>SRF: ~21 developers, <span style="color:darkgreen">up 90%</span></li>
+        <li>(S)M: ~22 developers, <span style="color:darkgreen">up 80%</span></li>
     </ul>
 </section>
 
