Added unit test points

--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -114,8 +114,10 @@
 
 <section>
     <h3>SMW 1.8: Unit tests</h3>
-    <ul>
-        <li></li>
+    <ul class="incremental">
+        <li>First unit tests, integrated with MW</li>
+        <li>Only coverage of some components so far</li>
+        <li>New tests being added</li>
     </ul>
 </section>
 
