fix image display

--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -102,7 +102,7 @@
 
 <section>
     <h3>SMW 1.7: #subobject</h3>
-    <ul>
+    <ul class="incremental">
         <!-- Markus -->
         <li>TODO</li>
         <li><a href="http://semantic-mediawiki.org/wiki/Subobject_handling">New developer documentation</a></li>
@@ -129,11 +129,13 @@
 
 <section>
     <h3>SMW 1.8: Ask UI improvements</h3>
-    <ul>
+    <ul class="incremental">
         <!-- Jeroen -->
         <li>Less cluttered, more dynamic</li>
-        <li>Better documentation</li>
-        <li><a href="http://semantic-mediawiki.org/wiki/Special:Ask"><img src="resources/ask.png" width="600px"></a></li>
+        <li>
+            Better documentation<br />
+            <a href="http://semantic-mediawiki.org/wiki/Special:Ask"><img src="resources/ask.png" width="600px"></a>
+        </li>
     </ul>
 </section>
 
