Added Ask API and JSON format slide

--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -151,6 +151,17 @@
 </section>
 
 <section>
+    <h3>SMW 1.8: Ask API and JSON format</h3>
+    <ul class="incremental">
+        <!-- Jeroen -->
+        <li><a href="http://www.semantic-mediawiki.org/wiki/Ask_API">Ask API now stable</a></li>
+        <li>Supports sorting and continuation</li>
+        <li><a href="http://www.semantic-mediawiki.org/wiki/Help:JSON_format">JSON format</a> updated to match</li>
+        <li>Compatibility via syntax=obsolete</li>
+    </ul>
+</section>
+
+<section>
     <h3>Other improvements</h3>
     <ul>
         <!-- Markus -->
