--- a/smwcon/2012fall/maps/maps-is-awesome.html
+++ b/smwcon/2012fall/maps/maps-is-awesome.html
@@ -7,27 +7,206 @@
 <!-- One section is one slide -->
 
 <section>
-    <h2 style="font-size:60px;">Yearly SMW overview</h2>
+    <h2 style="font-size:60px;">New features<br />in Maps and Semantic Maps</h2>
     <!--<h5 align="center">2012</h5>-->
     <br /><br />
-    <h6 align="center">bit.ly/</h6>
+    <h6 align="center">bit.ly/maps-2012</h6>
 </section>
 
 <section>
-    <img src="resources/popup.png" width="600">
+    <img src="resources/cat-on-map.jpg" width="600" class="mapcat">
 </section>
 
-
-
 <section>
-    <h3>The roadmap</h3>
+    <h3>Le content</h3>
     <ul>
-        <li>What would you like to see?</li>
+        <li>Recap: what are these extensions?</li>
+        <li>Recap: demo of basic functionality</li>
+        <li><b>Demo of the awesome new stuff</b></li>
+        <li>Roadmap</li>
+        <li>Questions</li>
     </ul>
 </section>
 
 <section>
-    <img src="resources/patch.jpg" width="800">
+    <h3>Maps</h3>
+    <ul>
+        <li>Embedding of interactive maps</li>
+        <li>Geocoding</li>
+        <li>Coordinate parsing and formatting</li>
+        <li>Geospatial functions</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Semantic Maps</h3>
+    <ul class="incremental">
+        <li>Extends Maps and SMW</li>
+        <li>Geographic coordinate type</li>
+        <li>Map result format</li>
+        <li>Extends Semantic Forms</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Demo's!</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples">Maps</a></li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Semantic_Maps_examples">Semantic Maps</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>2.0 release</h3>
+    <ul>
+        <li>Released in October, 10 months after 1.0.5</li>
+        <li>>400 commits by 20 developers</li>
+        <li>Tons of new features</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Google Maps v3 support</h3>
+    <ul>
+        <li>Now complete</li>
+        <li>Removed Google Maps 2 support</li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_basic_map">Streetview</a></li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_layer_map">Layers</a></li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_fusion_tables">Fusion tables</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Shapes!</h3>
+    <ul>
+        <li>For Google Maps and OpenLayers</li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_shapes">Polygons, rectangles, circles, lines</a></li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_polygons_on_hover">Polygons on hover</a></li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Special:MapEditor">Visual map editor</a></li>
+        <li>Implemented by Kim Eik</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Marker clustering</h3>
+    <ul>
+        <li>For Google Maps</li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_marker_clustering">Example</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Searching through markers</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_searchmarkers">Google Maps</a></li>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/OpenLayers_searchmarkers">OpenLayers</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Static maps</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_static_maps">Google Maps</a></li>
+        <li>OpenLayers</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Max and min zoom</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_maxzoom_and_minzoom">Google Maps</a></li>
+        <li>OpenLayers</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Ground overlays</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_ground_overlays">Google Maps</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Automatic opening of infowindows</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_tag_and_autoinfowindows">Google Maps</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>Markers with direct link</h3>
+    <ul>
+        <li><a href="http://semantic-mediawiki.org/wiki/Maps_examples/Google_Maps_direct_link">Google Maps</a></li>
+        <li>OpenLayers</li>
+    </ul>
+</section>
+
+<section>
+    <h3>More new features</h3>
+    <ul class="incremental">
+        <li>Copyable coordinates</li>
+        <li>Points of interest (Google Maps)</li>
+        <li>Marker grouping (OpenLayers)</li>
+        <li>Realizable maps</li>
+        <li>Inline labels (Google Maps)</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Removed/deprecated features</h3>
+    <ul class="incremental">
+        <li>Google Maps v2</li>
+        <li>Yahoo! Maps</li>
+        <li>WMF OSM (tenporary disabled)</li>
+        <li>display_points vs display_map</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Roadmap: shapes in SMW</h3>
+    <ul class="incremental">
+        <li>Store polygons, lines, etc in SMW</li>
+        <li>Query shapes and visualize them on maps</li>
+        <li>Query filtering on shapes</li>
+        <li>Nischay Nahata to the rescue :)</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Roadmap: image layers</h3>
+    <ul class="incremental">
+        <li>Images as base layers</li>
+        <li>Being worked on by Daniel Werner</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Roadmap: visual map editor</h3>
+    <ul class="incremental">
+        <li>Improve integration in Maps</li>
+        <li>Integrate with form inputs</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Roadmap: ???</h3>
+    <ul class="incremental">
+        <li>Are you working on something?</li>
+        <li>Anything you would like to be added?</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Roadmap: ???</h3>
+    <ul class="incremental">
+        <li>Are you working on something?</li>
+        <li>Anything you would like to be added?</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Questions</h3>
+    <img src="resources/dafuiq.jpg" class="dafuiq">
 </section>
 
 <section>
