added one more point

--- a/smwcon/2012fall/maps/maps-is-awesome.html
+++ b/smwcon/2012fall/maps/maps-is-awesome.html
@@ -149,6 +149,7 @@
         <li>Marker grouping (OpenLayers)</li>
         <li>Realizable maps</li>
         <li>Inline labels (Google Maps)</li>
+        <li>Markers that change on click</li>
     </ul>
 </section>
 
